[tool.poetry]
name = "one-time-secret"
version = "0.1.0"
description = ""
authors = ["Nikolaj Gordienko <nicolas.gordienko@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "one_time_secret"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
flake8 = "^7.0.0"
uvicorn = "^0.27.1"
pydantic = "^2.6.1"
fastapi = "^0.109.2"
requests = "^2.31.0"
alembic = "^1.13.1"
sqlalchemy = "^2.0.27"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
sqlalchemy-utils = "^0.41.1"
responses = "^0.25.0"


[tool.poetry.group.dev.dependencies]
coverage = "^7.4.1"
pyyaml = "^6.0.1"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
